[package]
name = "rust_conn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_conn"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.26.0"
tokio = { version = "1.32.0", features = ["macros", "sync", "rt-multi-thread"] }
